# serializer version: 1
# name: test_conversation_entity
  list([
    UserContent(role='user', content='hello', attachments=None),
    AssistantContent(role='assistant', agent_id='conversation.custom_openai_conversation', content='Hello, how can I help you?', tool_calls=None),
  ])
# ---
# name: test_function_call[config_entry_options0]
  list([
    UserContent(role='user', content='Please call the test function', attachments=None),
    AssistantContent(role='assistant', agent_id='conversation.custom_openai_conversation', content=None, tool_calls=[ToolInput(tool_name='test_tool', tool_args={'param1': 'call1'}, id='call_call_1')]),
    ToolResultContent(role='tool_result', agent_id='conversation.custom_openai_conversation', tool_call_id='call_call_1', tool_name='test_tool', tool_result='value1'),
    AssistantContent(role='assistant', agent_id='conversation.custom_openai_conversation', content='I have successfully called the function', tool_calls=None),
  ])
# ---
# name: test_function_exception[-config_entry_options0]
  'Unexpected tool argument response: Expecting value: line 1 column 1 (char 0)'
# ---
# name: test_function_exception[{"para-config_entry_options0]
  'Unexpected tool argument response: Unterminated string starting at: line 1 column 2 (char 1)'
# ---
# name: test_unknown_hass_api[config_entry_options0]
  dict({
    'continue_conversation': False,
    'conversation_id': 'conversation-id',
    'response': dict({
      'card': dict({
      }),
      'data': dict({
        'code': 'unknown',
      }),
      'language': 'en',
      'response_type': 'error',
      'speech': dict({
        'plain': dict({
          'extra_data': None,
          'speech': 'Error preparing LLM API',
        }),
      }),
    }),
  })
# ---
